<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:id="@+id/guideLeft"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="12dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideRight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="12dp" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#DDD"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.Guideline
                android:id="@+id/guideStartAction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="12dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideEndAction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="12dp" />

            <TextView
                android:id="@+id/textTop"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:text="@string/the_art_museum"
                android:textAllCaps="true"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideStartAction"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/shopTitle"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:text="@string/shop_title"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/textTop"
                app:layout_constraintRight_toLeftOf="@id/imageMenu"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="@id/guideEndAction"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <ImageView
            android:id="@+id/containerImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/watch"
            android:contentDescription="@string/contentDecription"
            app:layout_constraintEnd_toEndOf="@id/guideRight"
            app:layout_constraintStart_toStartOf="@id/guideLeft"
            app:layout_constraintTop_toBottomOf="@+id/actionBar" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/product_name"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/guideLeft"
            app:layout_constraintTop_toBottomOf="@+id/containerImage" />

        <TextView
            android:id="@+id/productDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/product_description"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@id/guideRight"
            app:layout_constraintStart_toStartOf="@id/guideLeft"
            app:layout_constraintTop_toBottomOf="@+id/productName" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/product_price"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/guideLeft"
            app:layout_constraintTop_toBottomOf="@id/productDescription" />

        <TextView
            android:id="@+id/productMemberPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_member_price"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/guideLeft"
            app:layout_constraintTop_toBottomOf="@id/productPrice" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="10dp"
            android:background="@color/button_color"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideRight"
            app:layout_constraintStart_toStartOf="@id/guideLeft"
            app:layout_constraintTop_toBottomOf="@id/productMemberPrice" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>